# DocRAG

./: README.md  pyproject.toml  requirements.txt
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/node/: nodes.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
